実行可能Jar作成設定追加